added password validation

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 
       <div class="sign-up-form">
         <h2>Let's do this!</h2>
-        <form action="" method="post">
+        <form action="" method="post" id="sign_up_form">
           <div style="float:left; margin-right:3rem; margin-left: 3rem; margin-bottom: 1rem;">
             <label for="first_name">FIRST NAME</label>
             <input type="text" id="first_name" required/>
@@ -118,4 +118,5 @@
       </div>
     </div>
   </body>
+  <script src="scripts.js"></script>
 </html>
